--- a/index.html
+++ b/index.html
@@ -90,15 +90,10 @@
 
 <p>Hi! I am a Research Engineer in Extreme Classification group at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-india/">Microsoft Research (MSR)</a> under the guidance of <a href="http://manikvarma.org/">Dr. Manik Varma</a>. My primary focus involves developing machine learning algorithms for large-scale industrial applications in search and recommendation. I completed my undergraduate studies in Computer Science at the <a href="https://www.iitrpr.ac.in/">Indian Institute of Technology (IIT), Ropar</a> in 2021, where I was honored with the Director’s Gold Medal for my overall performance. During my UG, I worked closely with <a href="https://sites.google.com/site/dhallabhinav/">Dr. Abhinav Dhall</a> exploring interpretable deep learning architectures with a particular emphasis on their applications in healthcare.</p>
 
-<h2 id="research-interests">Research Interests</h2>
-<ul>
-  <li>
-    <p><strong>Efficient Machine Learning Models for Real World:</strong> Machine learning architectures and algorithms for large scale applications especially in data-intensive and compute-constrained settings.</p>
-  </li>
-  <li>
-    <p><strong>Robust and Interpretable Models:</strong> Aligning machine learning models with human understanding and interpretation, enabling both accuracy and higher utility.</p>
-  </li>
-</ul>
+<!-- ## Research Interests
+- **Efficient Machine Learning Models for Real World:** Machine learning architectures and algorithms for large scale applications especially in data-intensive and compute-constrained settings.
+
+- **Robust and Interpretable Models:** Aligning machine learning models with human understanding and interpretation, enabling both accuracy and higher utility. -->
 
 <h2 id="news">News</h2>
 <ul>
