--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 <h2 id="news">News</h2>
 <ul>
+  <li><strong>[Feb. 2024]</strong> Presented our work on <a href="https://drive.google.com/file/d/1MdXABcbeTHpV7DQCii3AfnTBFQt1kiTr/view?usp=sharing">Extreme Retrieval Engines to <strong>Bill Gates</strong> at Microsoft India :)</a></li>
   <li><strong>[Jan. 2024]</strong> Our paper <a href="https://openreview.net/pdf?id=6ARlSgun7J">Enhancing Tail Performance in Extreme Classifiers by Label Variance Reduction</a> accepted at ICLR 2024.</li>
   <li><strong>[Sep. 2023]</strong> Now Research Engineer II at MSR!</li>
   <li><strong>[Jul. 2023]</strong> Volunteer at COLT 2023.</li>
